# telegram-quiz-bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  async_db_test.py  buttons.py  create_bot.py  database.py  game.py  handlers.py  main.py  pyproject.toml  quiz.py  requirements.txt  run_bot.py
data/: questions.json
project/: buttons.py  create_bot.py  custom_filters.py  database.py  handlers.py  init_bot.py  questions.py  quiz.py
project/services/: crud.py  data_service.py  handler_service.py  questions.py  quiz_service.py
src/: _buttons.py  _custom_filters.py  _database.py  _handlers.py  _init_bot.py  buttons.py  custom_filters.py  database.py  handlers.py  init_bot.py  questions.py
src/_services/: _crud.py  _questions.py
src/api/: __init__.py  error.py  quiz.py
src/bll/: filter.py  question.py  quiz.py
src/bll/dto/: question.py  user.py
src/bll/exceptions/: user.py
src/bll/filters/: answer_options.py  right_answer.py
src/bll/middlewares/: db.py
src/core/: constants.py  logging_config.py  settings.py
src/core/db/: init.py  logs.py  setup.py
src/core/middlewares/: db.py
src/dal/: buttons.py  quiz.py
src/services/: crud.py  questions.py
